# masked-faces-detection

./: .gitignore  .gitlab-ci.template  Makefile  README.md  YOLOv3_Mask_Detection.ipynb  activate.sh  init.sh  pyproject.toml  requirements.dev.txt  requirements.txt
coverage/: coverage.txt
data/: .gitignore  faster_rcnn_inception_v2_pets.config
data/Mask.tfrecord/: README.roboflow.txt
data/Mask.tfrecord/test/: Mask.tfrecord
data/Mask.tfrecord/train/: Mask_label_map.pbtxt
data/Mask.tfrecord/valid/: Mask.tfrecord
data/image_urls/: urls01.txt  urls02.txt  urls03.txt  urls04.txt
data/raw/: iris.csv
data/yolo/: obj.data  obj.names  test.txt  train.txt  valid.txt
data/yolo/train/: 0.txt  10.txt  100.txt  102.txt  104.txt  106.txt  112.txt  113.txt  114.txt  118.txt  119.txt  122.txt  123.txt  131.txt  132.txt  133.txt  14.txt  140.txt  143.txt  (+268 more)
doc/: Makefile  Tensorflow_API_Implementation.md
doc/source/: conf.py  index.rst
mask/: test.txt  train.txt  valid.txt
mask_detection/: utils.py
mask_detection/application/: main.py
mask_detection/domain/: clean.py  load.py
mask_detection/infrastructure/: files.py  scrapping.py  technical_cleaning.py
mask_detection/settings/: .env_template  __init__.py  base.py  dev.py  test.py
mask_detection/utils/: prepare_dataset.py
notebooks/: .gitignore  Convert_YOLO_Images.ipynb  TensorflowAPI.ipynb
notebooks/notebooks_public/: 2018-04-01_demo_notebook.ipynb  20200504_image_scraping.ipynb
tests/data_tests/: test_dummy.py
yolov3/: results.json  results.txt
yolov3/utils/: data_augmentation.py  scrapping.py
(+362 files in other folders)
